--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Title</title>
     <style>
         form{
-            border: 10px solid #d5feff;
+            border: 10px solid #00a8f3;
         }
         table{
             border: 5px solid white;
+            background-color: white;
         }
         th{
             color: white;
@@ -29,7 +30,7 @@
     </style>
 </head>
 <body>
-
+<div align="center">
 <form style="width: 500px">
     <table border="1" style="border-collapse: collapse"; width="100%">
         <tr>
@@ -72,6 +73,6 @@
         </tr>
     </table>
 </form>
-
+</div>
 </body>
 </html>
