--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <style>
         form{
-            border: 10px solid #00a8f3;
+            border: 13px solid #d5feff;
         }
         table{
             border: 5px solid white;
