--- a/index.html
+++ b/index.html
@@ -31,48 +31,48 @@
 </head>
 <body>
 <div align="center">
-<form style="width: 500px">
-    <table border="1" style="border-collapse: collapse"; width="100%">
-        <tr>
-            <th colspan="4">SỞ THÍCH CỦA BẠN</th>
-        </tr>
-        <tr>
-            <td class="blue">Họ và tên</td>
-            <td colspan="3">
-                <input type="text" style="width: 60%">
-            </td>
-        </tr>
-        <tr>
-            <td class="blue">Email</td>
-            <td colspan="3">
-                <input type="text" style="width: 40%">
-            </td>
-        </tr>
-        <tr class="red">
-            <td class="blue">Sở thích</td>
-            <td><input type="checkbox" name="hobby"> Thể thao </td>
-            <td><input type="checkbox" name="hobby"> Âm nhạc </td>
-            <td><input type="checkbox" name="hobby"> Đọc sách </td>
-        </tr>
-        <tr class="red">
-            <td></td>
-            <td><input type="checkbox" name="hobby"> Lướt web </td>
-            <td><input type="checkbox" name="hobby"> Chơi game </td>
-            <td><input type="checkbox" name="hobby"> Điện ảnh </td>
-        </tr>
-        <tr class="red">
-            <td></td>
-            <td><input type="checkbox" name="hobby"> Du lịch </td>
-        </tr>
-        <tr>
-            <td></td>
-            <td colspan="3">
-                <button>Gửi thông tin</button>
-                <button type="reset">Nhập lại</button>
-            </td>
-        </tr>
-    </table>
-</form>
+    <form style="width: 500px">
+        <table border="1" style="border-collapse: collapse"; width="100%">
+            <tr>
+                <th colspan="4">SỞ THÍCH CỦA BẠN</th>
+            </tr>
+            <tr>
+                <td class="blue">Họ và tên</td>
+                <td colspan="3">
+                    <input type="text" style="width: 60%" name="yourname">
+                </td>
+            </tr>
+            <tr>
+                <td class="blue">Email</td>
+                <td colspan="3">
+                    <input type="text" style="width: 40%" name="email">
+                </td>
+            </tr>
+            <tr class="red">
+                <td class="blue">Sở thích</td>
+                <td><input type="checkbox" name="hobby"> Thể thao </td>
+                <td><input type="checkbox" name="hobby"> Âm nhạc </td>
+                <td><input type="checkbox" name="hobby"> Đọc sách </td>
+            </tr>
+            <tr class="red">
+                <td></td>
+                <td><input type="checkbox" name="hobby"> Lướt web </td>
+                <td><input type="checkbox" name="hobby"> Chơi game </td>
+                <td><input type="checkbox" name="hobby"> Điện ảnh </td>
+            </tr>
+            <tr class="red">
+                <td></td>
+                <td><input type="checkbox" name="hobby"> Du lịch </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="3">
+                    <button>Gửi thông tin</button>
+                    <button type="reset">Nhập lại</button>
+                </td>
+            </tr>
+        </table>
+    </form>
 </div>
 </body>
 </html>
